<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="UselessParent"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dip"
            android:layout_height="200dip"
            android:src="@drawable/ic_launcher"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"/>
        <EditText
            android:id="@+id/email_value"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:ignore="Autofill"/>


        <EditText
            android:id="@+id/password_value"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:ignore="Autofill"/>
        <Button
            android:id="@+id/email_sign_in"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/recover_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/recover_password"
                android:textColor="#4095c2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textColor="#4095c2"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>