<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="UselessParent"
        android:padding="16dp">
        <ImageView
            android:layout_width="200dip"
            android:layout_height="200dip"
            android:src="@drawable/ic_launcher"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"/>
            <EditText
                android:id="@+id/sign_up_username"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/sign_up_Email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/sign_up_Password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/sign_up_confirm_Password"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
        <Button
            android:id="@+id/email_sign_up"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>